made image view larger on mobile menu item fixed (height problem on mobile) created a separate algorithm handler for nextfit algo

--- a/src/style.css
+++ b/src/style.css
@@ -228,7 +228,7 @@
   --menu-margin: min(1vmax, 15px);
   --menu-padding: calc(var(--menu-margin) / 2);
   --menu-height: calc(var(--content-size) * 1.1875);
-  --menu-items: 5;
+  --menu-items: 6;
   --menu-expanded: 0;
   --menu-current-px: 2px;
   --logo-size: min(30px, 3vmax);
@@ -638,12 +638,17 @@ a {
 }
 
 .art {
+  /* flex-grow: 1; */
+  object-fit: cover;
   /* height: 30vh; */
   background-color: var(--text-color);
   margin: 10px;
   /* padding: 5px; */
   box-shadow: 0 0 0 4px var(--accent-color);
 }
+/* .art-gallery li:last-child {
+  flex-grow: 10;
+} */
 
 .hidden {
   visibility: hidden;
@@ -890,6 +895,10 @@ a {
   }
   .art-gallery {
     flex-direction: row;
+  }
+  #expanded-img {
+    max-width: 95vw;
+    max-height: 95vh;
   }
 }
 
